# robin

./: .env.example  .gitignore  AGENT_POPULATION_PLAN.md  ARCHITECTURE.md  CLAUDE.md  DELIVERY_SUMMARY.md  DOCKER_QUICK_FIX.txt  DOCKER_TROUBLESHOOTING.md  Dockerfile  FINAL_DELIVERY.md  HTTP_BACKEND.md  IMPROVEMENTS.md  INDEX.md  INTEGRATION.md  LICENSE  MODEL_SELECTOR_SUMMARY.md  MULTI_AGENT_README.md  MULTI_AGENT_SYSTEM.md  OLLAMA_GUIDE.md  OLLAMA_INTEGRATION.md  QUICK_START.md  README.md  README_MCP.md  README_MULTI_AGENT.md  SECURITY_AUDIT.md  SETTINGS_SCREENSHOT_MOCKUP.txt  SETTINGS_UI_DESCRIPTION.md  START_HERE.md  VULNERABILITY_STATUS.md  agent_communication.py  agent_orchestrator.py  agents.py  antigravity.py  api.py  config.py  constants.py  docker-compose.yml  enhanced_ui.py  entrypoint.sh  examples_multi_agent.py  (+23 more)
Agents/ Specialists/: KERNEL - Reverse Engineer.md  MIRAGE — Cryptography Expert  STATIC - RF & Hardware Hacker.md
Agents/Commander & Orchestrator/: NEXUS - Commander & Orchestrator.md
Agents/Investigation Division/: ARCHIVIST - Data Recovery Specialist.md  BISHOP - Attribution Analyst.md  FLUX - Log & Timeline Expert.md  GHOST - Undercover Intelligence Researcher.md  LEDGER - Blockchain Investigator.md  MASON - Incident Response Investigator.md  PRISM - Traffic & Protocol Analyst.md  REAPER - Threat Hunter.md  TRACE - Digital Forensics Investigator.md  VEIL - Dark Web Researcher.md
Agents/experts/: AXIOM - Threat Intelligence Analyst.md  BISTON - Defensive Security Expert.md  ECHO - Social Engineering Expert.md  FORRS - Malware Analyst.md  OREL - OSINT Researcher.md  VECTOR - Network Specialist.md  ZERO - Exploit Researcher.md
Agents/hackers/: CIPHER - White Hat Hacker.md  PHANTOM — Red Hat Hacker  SPECTER - Reformed Black Hat.md  WRAITH — Grey Hat Hacker
agent/: __init__.py  client.py  ollama_client.py  prompts.py  subagents.py  tools.py
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: __init__.py  health.py  investigations.py  reports.py  settings.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/models/: __init__.py  graph.py  investigation.py
backend/app/services/: __init__.py  agent_service.py  graph_service.py  report_service.py
backend/app/sse/: __init__.py  stream.py
core/: __init__.py  scrape.py  search.py
docs/: API_README.md
examples/: api_example.py
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/investigation/: page.tsx
frontend/src/app/investigations/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/graph/: GraphControls.tsx  GraphFilters.tsx  GraphLegend.tsx  NodeDetails.tsx  ThreatGraph.tsx
frontend/src/components/history/: HistoryCard.tsx  HistoryFilters.tsx  HistoryList.tsx
frontend/src/components/investigation/: InvestigationChat.tsx  MessageBubble.tsx  QueryInput.tsx  StreamingResponse.tsx  index.ts
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/components/reports/: ExportOptions.tsx  IOCTable.tsx  ReportBuilder.tsx  ReportPreview.tsx  SectionEditor.tsx
frontend/src/components/tools/: SearchProgress.tsx  SubAgentBadge.tsx  SubAgentResults.tsx  ToolCard.tsx  ToolPanel.tsx  ToolTimeline.tsx  index.ts
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/providers/: QueryProvider.tsx  ThemeProvider.tsx  index.tsx
frontend/src/stores/: graphStore.ts  investigationStore.ts
frontend/src/types/: cytoscape-cola.d.ts  graph.ts  index.ts
src/robin/: config.py  llm.py  llm_utils.py  main.py  ui.py
tests/: __init__.py  conftest.py  test_api.py  test_constants.py  test_integration.py  test_main.py  test_scrape.py  test_search.py
(+10 files in other folders)
